--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
   <meta name="description" content="Implementación de React con TailwindCSS - Ejemplos básicos">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://cswni.github.io/react-app-web-fundamentos/">
+  <meta property="og:url" content="https://wilmerzel19.github.io/encuentro-10/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Vite + React + TS ">
   <meta property="og:description" content="Implementación de React con TailwindCSS - Ejemplos básicos">
-  <meta property="og:image" content="https://cswni.github.io/preview.png">
+  <meta property="og:image" content="https://wilmerzel19.github.io/preview.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="cswni.github.io">
-  <meta property="twitter:url" content="https://cswni.github.io/react-app-web-fundamentos/">
+  <meta property="twitter:domain" content="wilmerzel19.github.io">
+  <meta property="twitter:url" content="https://wilmerzel19.github.io/encuentro-10/">
   <meta name="twitter:title" content="Vite + React + TS ">
   <meta name="twitter:description" content="Implementación de React con TailwindCSS - Ejemplos básicos">
-  <meta name="twitter:image" content="https://cswni.github.io/preview.png">
+  <meta name="twitter:image" content="https://wilmerzel19.github.io/preview.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         
     <meta name="theme-color" content="#FFCCAA" />
-    <title>Vite + React + TS</title>
+    <title>react</title>
   </head>
   <body>
     <div id="root"></div>
